<resources>
    <string name="app_name">My Application 11</string>
    <string name="enter_name">Enter name...</string>
    <string name="enter_number">Enter number...</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="add_contact">Add contact</string>
    <string name="nguyen_van_a">Nguyen Van A</string>
    <string name="_0912_345_678">0912 345 678</string>
</resources>